(fix):joe:responsive css & hide scrollbar

--- a/src/assets/css/launcher.css
+++ b/src/assets/css/launcher.css
@@ -44,6 +44,7 @@ img {
 
 .hide {
     display: block;
+    overflow: hidden;
 }
 
 .button-frame {
@@ -154,6 +155,7 @@ img {
     opacity: 1;
     z-index: 1;
     pointer-events: all;
+    overflow: hidden;
 }
 
 .rotation {
