--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -209,15 +209,16 @@ section.login > p a {
 
 
 section.welcomescreen {
-  position: relative;
-  /* min-height: 100vh; */
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 25%;
   background: url(../img/herobg.png);
   background-size: cover;
   background-position: bottom;
   padding: 330px 0;
-  /* max-width: 1180px; */
-  /* width: 100%; */
-  /* height: 100px; */
+  
 }
 section.welcomescreen .actionHeader {
   justify-content: flex-end;
